plugins {
    id 'com.gradleup.shadow' version '9.2.2'
    id 'java-library'
    id 'maven-publish'
}

apply plugin: 'java-library'

dependencies {
    implementation project(':shared')

    implementation 'androidx.annotation:annotation:1.9.1'
    implementation "commons-codec:commons-codec:1.18.0"
    implementation "org.apache.commons:commons-lang3:3.17.0"
    implementation 'org.json:json:20230618'

    // https://github.com/particle-iot/ecjpake-java
    //implementation files('libs/ecjpake-java-ffd72ac.jar')
    implementation 'org.bouncycastle:bcprov-jdk14:1.77'

    testImplementation 'junit:junit:4.13.2'

}

java {
    withSourcesJar()
    //withJavadocJar()
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

tasks.javadoc {
    source = sourceSets.main.allJava
    options.linkSource = true
}

// resolves InaccessibleObjectException in ReflectionToStringBuilder
// -parameters enables reflection to access constructor parameter names
tasks.withType(JavaCompile) {
    options.compilerArgs += [
        '-parameters',
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
    ]
}
test {
    jvmArgs += [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
    ]
}

publishing {
    publications {
        "$project.name"(MavenPublication) {
            artifactId "pumpx2-messages"
            groupId rootProject.group
            version rootProject.version
            from components.java
            pom {
                name = "PumpX2 Messages"
                description = "A Java library for converting between known messages and byte streams for the Tandem t:slim X2 and Mobi insulin pumps."
                url = "https://github.com/jwoglom/pumpX2"
                licenses {
                    license {
                        name = "The MIT License (MIT)"
                        url = "http://opensource.org/licenses/MIT"
                    }
                }
                developers {
                    developer {
                        id = "jwoglom"
                        name = "James Woglom"
                        email = "j@wogloms.net"
                    }
                }
                scm {
                    connection = "scm:git:git@github.com:jwoglom/pumpX2.git"
                    developerConnection = "scm:git:git@github.com:jwoglom/pumpX2.git"
                    url = "scm:git:git@github.com:jwoglom/pumpX2.git"
                }
            }
        }
    }
}
